--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+Flask==3.1.0
+Flask-CORS==5.0.1
+pandas==2.2.3
+numpy==1.26.4
+scikit-learn==1.6.1
+joblib==1.5.0
+gunicorn==23.0.0
 nba_api==1.2.1
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=0.24.0
-joblib>=1.0.0
-Flask>=2.0.0
-Flask-CORS>=3.0.0
-gunicorn>=20.1.0 
+psycopg2-binary==2.9.9 
