--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,12 @@ services:
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.0 
+        value: 3.9.0
+      - key: DB_HOST
+        value: dpg-d07hog3uibrs73fg9c20-a.oregon-postgres.render.com
+      - key: DB_NAME
+        value: budgetgm
+      - key: DB_USER
+        value: budgetgm_user
+      - key: DB_PASSWORD
+        value: aqXhpXpEGGBmI5WvgG8YqPbqEBKRBqSx 
