--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.0.1
-Flask-CORS==3.0.10
+Flask==3.0.2
+Flask-CORS==4.0.0
+Werkzeug==3.0.1
 pandas==2.0.3
 numpy==1.26.4
 scikit-learn==1.4.0
